syntax = "proto3";
option java_multiple_files = false;
option java_package = "com.mloine.sms.proto";
option java_outer_classname = "SmsProto";

package sms;

service SmsService {
  rpc send(SmsRequest) returns (stream SmsResponse) {}
  rpc createPhone(stream PhoneRequest) returns (PhoneNumberResponse) {}
}

message SmsRequest{
  repeated string phoneNumber = 1;
  string content = 2;
}

message SmsResponse{
  string result = 1;
}

message PhoneRequest{
  string phoneNumber = 1;
}

message PhoneNumberResponse{
  string result = 1;
}